turtleart.lessons.turtleart.Main.SmallSquare.scala.error
Source:4: error: not found: value nbPas
avance(nbPas:Double)
       ^Source:5: error: not found: value nbPas
avance(nbPas:Double)
       ^